ecmascript/parser/tests/test262-error-references/fail/dfc6f1cc5533e0bb.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/dfc6f1cc5533e0bb.js:1:5
  |
1 | for(({a}) in 0);
  |     ^^^^^

error: TS2491
 --> $DIR/tests/test262-parser/fail/dfc6f1cc5533e0bb.js:1:6
  |
1 | for(({a}) in 0);
  |      ^^^

